# telfox

./: .clang-format  .gitignore  README.md
.devcontainer/: devcontainer.json
docker/: cppdev.Dockerfile  docker-compose.yml  foxglove.Dockerfile  humble.Dockerfile
scripts/: conan_cheatsheet.sh
src/foxglove_websocket/: CMakeLists.txt  package.xml
src/telfox/: CMakeLists.txt  package.xml
src/telfox/src/: telfox.cpp
